--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 amqp==5.1.1
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
+asttokens==2.1.0
+backcall==0.2.0
 billiard==3.6.4.0
 celery==5.2.7
-certifi==2022.6.15
+certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
@@ -11,30 +12,44 @@ click-plugins==1.1.1
 click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
-Django==4.1
+decorator==5.1.1
+Django==4.1.3
 django-crispy-forms==1.14.0
-django-debug-toolbar==3.6.0
-django-extensions==3.2.0
+django-debug-toolbar==3.7.0
+django-extensions==3.2.1
 django-filter==22.1
-djangorestframework==3.13.1
-drf-yasg==1.21.3
-idna==3.3
+djangorestframework==3.14.0
+drf-yasg==1.21.4
+executing==1.2.0
+Faker==15.3.2
+idna==3.4
 inflection==0.5.1
+ipython==8.6.0
 itypes==1.2.0
+jedi==0.18.2
 Jinja2==3.1.2
 kombu==5.2.4
+Markdown==3.4.1
 MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
 packaging==21.3
-pkg_resources==0.0.0
-prompt-toolkit==3.0.30
-psycopg2-binary==2.9.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.32
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.13.0
 pyparsing==3.0.9
-pytz==2022.2.1
+python-dateutil==2.8.2
+pytz==2022.6
 requests==2.28.1
 ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
+ruamel.yaml.clib==0.2.7
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.4.3
+stack-data==0.6.1
+traitlets==5.5.0
 uritemplate==4.1.1
 urllib3==1.26.12
 vine==5.0.0
