--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+appnope==0.1.3
 asgiref==3.5.2
 asttokens==2.1.0
 backcall==0.2.0
@@ -22,6 +23,7 @@ djangorestframework==3.14.0
 drf-yasg==1.21.4
 executing==1.2.0
 Faker==15.3.2
+flake8==6.0.0
 idna==3.4
 inflection==0.5.1
 ipython==8.6.0
@@ -32,6 +34,7 @@ kombu==5.2.4
 Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 packaging==21.3
 parso==0.8.3
 pexpect==4.8.0
@@ -39,6 +42,8 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.32
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.10.0
+pyflakes==3.0.1
 Pygments==2.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
