--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ django-filter==22.1
 djangorestframework==3.14.0
 drf-yasg==1.21.4
 executing==1.2.0
-Faker==15.3.2
 flake8==6.0.0
 idna==3.4
 inflection==0.5.1
@@ -47,6 +46,7 @@ pyflakes==3.0.1
 Pygments==2.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.6
 requests==2.28.1
 ruamel.yaml==0.17.21
