--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-filter==22.1
 djangorestframework==3.14.0
 drf-yasg==1.21.4
 executing==1.2.0
+Faker==17.6.0
 flake8==6.0.0
 idna==3.4
 inflection==0.5.1
