--- a/requirements.txt
+++ b/requirements.txt
@@ -15,15 +15,18 @@ coreapi==2.3.3
 coreschema==0.0.4
 decorator==5.1.1
 Django==4.1.3
+django-clearcache==1.2.1
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.7.0
 django-extensions==3.2.1
 django-filter==22.1
+django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
 drf-yasg==1.21.4
 executing==1.2.0
 Faker==17.6.0
 flake8==6.0.0
+flake8-quotes==3.3.2
 idna==3.4
 inflection==0.5.1
 ipython==8.6.0
@@ -39,6 +42,7 @@ packaging==21.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.1.0
 prompt-toolkit==3.0.32
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
